# spaceExplorer

./: .gitignore  check.py  criterions.py  experimentWindow.py  importDataWindow.py  main.py  mainWIndow.py  mainWindow.py  myjson.py  pyproject.toml  resources.py  specialWidgets.py  styles.py
