[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Trebias",email = "unitsss11@gmail.com"}
]
readme = "README.md"
requires-python = "<3.13, >=3.11"
dependencies = [
    "pyinstaller (>=6.14.2,<7.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pyqt6 (>=6.9.1,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
