[project]
name = "spaceexplorer"
version = "0.1.0"
description = ""
authors = [
    {name = "Trebias",email = "unitsss11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyqt6 (>=6.9.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
